# hors-python

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  unittests.yml
hors/: __init__.py  hors_sugar.py  hors_text_parser.py
hors/dict/: __init__.py  keywords.py  morph.py
hors/models/: __init__.py  abstract_period.py  dates_raw_data.py  hors_parse_result.py  i_has_edges.py  parser_models.py  text_token.py
hors/recognizers/: __init__.py  dates_period_recognizer.py  day_of_week_recognizer.py  days_month_recognizer.py  holidays_recognizer.py  month_recognizer.py  part_of_day_recognizer.py  recognizer.py  relative_date_recognizer.py  relative_day_recognizer.py  time_recognizer.py  time_span_recognizer.py  year_recognizer.py
hors/utils/: __init__.py  helpers.py  parser_extractors.py  parser_utils.py
tests/: test_base.py  test_extra.py
