[metadata]
name = hors
version = attr: hors.VERSION
url = https://github.com/22c-proxima/hors-python
author = Владимир Шомин
author_email = 22c.proxima@gmail.com
description = Разбор дат в строке. Порт на python проекта https://github.com/DenisNP/Hors
long_description=file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Office/Business
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities

[options]
python_requires = >=3.7
packages = find:

[options.package_data]
hors = dict/time_words.txt

[options.packages.find]
exclude = tests
щ